# tjump

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  THIRDPARTYLICENSES  pyproject.toml  tjump.tmux
src/tjump/: __init__.py  config.py  search.py  tmux.py  ui.py
tests/: test_config.py  test_search.py  test_tmux.py  test_ui.py
tjump/: tmux.py  ui.py
